Edited the panel moderator section

--- a/index.html
+++ b/index.html
@@ -472,6 +472,17 @@
                         </div> -->
                     </div>
                 </div>
+                <div class="panelists-section">
+                    <h3>Panel Moderator</h3>
+                    <div class="panelist-grid">
+                        <div class="panelist-card">
+                            <h4>Rabia Sirhindi</h4>
+                            <div class="affiliation">Educative</div>
+                            <p>Rabia Sirhindi is an experience university educator and is presently a Content Architect Lead at Educative.</p>
+                        </div>
+                        
+                    </div>
+                </div>
                 
                 <!-- <div class="speaker-bio">
                     <h3>Moderator</h3>
