--- a/index.html
+++ b/index.html
@@ -465,11 +465,11 @@
                             <p>Dr. Fakhar is a seasoned professional and professor. Presently, he is Director of Delivery at The Children's Place.</p>
                         </div>
                         
-                        <!-- <div class="panelist-card">
-                            <h4>Dr. Shafay Shamail</h4>
-                            <div class="affiliation">LUMS and NCEAC</div>
-                            <p>Dr. Shafay is a seasoned professor and is also the Chair of NCEAC.</p>
-                        </div> -->
+                        <div class="panelist-card">
+                            <h4>Dr. Zeeshan Ali Rana</h4>
+                            <div class="affiliation">Incharge, Software Engineering, NUCES, Lahore</div>
+                            <p>Dr. Zeeshan is an experienced professor, and Incharge of Software Engineering and National University of Computer and Emerging Science, Lahore Campus.</p>
+                        </div>
                     </div>
                 </div>
                 <div class="panelists-section">
