--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                 <li><span class="time">10:30-11:00</span> <span class="speaker">Muhammad Hamad Alizai</span> - <span class="title">Teaching Computer Science at Scale</span></li>
                 <li><span class="time">11:30-12:00</span> <span class="speaker">Mobin Javed and Maryam Ghafoor</span> - <span class="title">How We Designed a CS Course for Industry Success</span></li>
                 <li><span class="time">12:00-12:30</span> <span class="speaker">Matthew Barr</span> - <span class="title">Delivering a Work-Based Learning Degree Programme</span></li>
-                <li><span class="time">12:30-13:15</span> <span class="speaker">Rabia Sirhindi</span> - <span class="title">Panel: Computing Education in Pakistan – Going Forward in the age of AI</span></li>
+                <li><span class="time">12:30-13:15</span> <span class="speaker">Panel discussion</span> - <span class="title">Computing Education in Pakistan – Going Forward in the age of AI</span></li>
             </ul>
         </section>
 
