Made panelists cards consistent

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                         
                         <div class="panelist-card">
                             <h4>Dr. Zeeshan Ali Rana</h4>
-                            <div class="affiliation">Incharge, Software Engineering, NUCES, Lahore</div>
+                            <div class="affiliation">NUCES, Lahore</div>
                             <p>Dr. Zeeshan is an experienced professor, and Incharge of Software Engineering and National University of Computer and Emerging Science, Lahore Campus.</p>
                         </div>
                     </div>
