Removed coming soon class from Sarfraz abstract

--- a/index.html
+++ b/index.html
@@ -358,13 +358,12 @@
             <div class="session-content">
                 <div class="abstract">
                     <h3>Abstract</h3>
-                    <div class="coming-soon"><p>This talk dives into why programming is so hard for novices and why much of the blame lies not with them, but with how we teach it. Syntax errors, logic bugs, confusing explanations, and a growing sense of “I'm just not a coding person” are all part of the typical novice experience. But beyond those superficial challenges lies something deeper: a disconnect between student needs and instructional design. From young children to undergraduates, students face different learning challenges, yet we often teach them all the same way.</p>
+                    <p>This talk dives into why programming is so hard for novices and why much of the blame lies not with them, but with how we teach it. Syntax errors, logic bugs, confusing explanations, and a growing sense of “I'm just not a coding person” are all part of the typical novice experience. But beyond those superficial challenges lies something deeper: a disconnect between student needs and instructional design. From young children to undergraduates, students face different learning challenges, yet we often teach them all the same way.</p>
 
 <p>Why is there a disconnect between what students need and how we teach? Why do so many educators focus on limited correction of errors in programs and pseudo-code, while missing the opportunities these mistakes represent to improve their foundational conceptual understanding by building connections with pre-existing knowledge? And why do we assume students are ready to "think computationally" when we've never explicitly taught them what that means?</p>
 
 <p>We’ll take a fresh look at common struggles, re-design some teaching methods with declining pedagogical value, and explore some age-appropriate strategies to better support learners. Specifically, the key challenges faced by K2-K5 (primary school), K6-K12 (middle school to high school), and undergraduate learners will be discussed along with how the challenges of each level should be addressed through more tailored pedagogical approaches.</p>
 <p>If we want our students to succeed in programming, we can't just fix their bugs, we have to fundamentally debug the way we teach.</p>
-</div>
                 </div>
                 <div class="speaker-bio">
                     <h3>About the Speaker</h3>
