--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 
 <p>Why is there a disconnect between what students need and how we teach? Why do so many educators focus on limited correction of errors in programs and pseudo-code, while missing the opportunities these mistakes represent to improve their foundational conceptual understanding by building connections with pre-existing knowledge? And why do we assume students are ready to "think computationally" when we've never explicitly taught them what that means?</p>
 
-<p>We’ll take a fresh look at common struggles, re-design some teaching methods with declining pedagogical value, and explore some age-appropriate strategies to better support learners. Specifically, the key challenges faced by K2-K5 (primary school), K6-K12 (middle school to high school), and undergraduate learners will be discussed along with how the challenges of each level should be addressed through more tailored pedagogical approaches.</p>
+<p>We'll take a fresh look at common struggles, re-design some teaching methods with declining pedagogical value, and explore some age-appropriate strategies to better support learners. Specifically, the key challenges faced by K2-K5 (primary school), K6-K12 (middle school to high school), and undergraduate learners will be discussed along with how the challenges of each level should be addressed through more tailored pedagogical approaches.</p>
 <p>If we want our students to succeed in programming, we can't just fix their bugs, we have to fundamentally debug the way we teach.</p>
                 </div>
                 <div class="speaker-bio">
